Quite a few UI changes and moved rendering options into menus. Added renderer stats as a toggle option. Added basic built-in user guide.

--- a/vmve/vmve.vcxproj
+++ b/vmve/vmve.vcxproj
@@ -67,6 +67,9 @@
       <AdditionalLibraryDirectories>..\engine\build\$(Configuration)\;$(SolutionDir)vendor\cryptopp\lib\$(Configuration)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>engine.lib;cryptlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <Manifest>
+      <EnableDpiAwareness>true</EnableDpiAwareness>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -89,6 +92,9 @@
       <AdditionalDependencies>engine.lib;cryptlib.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <EntryPointSymbol>mainCRTStartup</EntryPointSymbol>
     </Link>
+    <Manifest>
+      <EnableDpiAwareness>true</EnableDpiAwareness>
+    </Manifest>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
