Lots of UI code changes. Moved each panel into its own file. UI variables are global but might change in the future. Also, engine no longer returns a pointer to my_engine* struct. Instead you simply call function and the engine stores its own engine pointer. This is because an application can only really have a single engine instance.

--- a/vmve/vmve.vcxproj.filters
+++ b/vmve/vmve.vcxproj.filters
@@ -57,6 +57,21 @@
     <ClCompile Include="src\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ui\panels\left_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\panels\menu_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\panels\right_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\panels\bottom_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ui\panels\center_panel.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ui\ui.h">
