--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -155,7 +155,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;assimp-vc143-mtd.lib;zlibstaticd.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)vendor\shaderc\lib\$(Configuration);C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -188,7 +188,7 @@ _CRT_SECURE_NO_WARNINGS</PreprocessorDefinitions>
       <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;assimp-vc143-mt.lib;zlibstatic.lib;xaudio2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Lib>
     <Lib>
-      <AdditionalLibraryDirectories>C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)vendor\shaderc\lib\$(Configuration);C:\VulkanSDK\1.3.231.1\Lib;$(SolutionDir)vendor\glfw\lib\Release;$(SolutionDir)vendor\assimp\lib\$(Configuration);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
