--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -224,5 +224,8 @@
     <ClInclude Include="src\rendering\api\vulkan\image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\rendering\renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
