--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClCompile Include="vendor\imgui\imgui_stdlib.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\rendering\terrain\quad_tree.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\windows\win32_memory.h">
@@ -219,6 +222,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\engine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\rendering\terrain\quad_tree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
