Testing basic implementation of DirectX 11.

--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="src\rendering\terrain\quad_tree.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\rendering\api\d3d11\d3d11.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\windows\win32_memory.h">
