--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -124,7 +124,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;xaudio2.lib;d3d11.lib;assimp-vc143-mtd.lib;zlibstaticd.lib;</AdditionalDependencies>
+      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;xaudio2.lib;d3d11.lib;d3dcompiler.lib;assimp-vc143-mtd.lib;zlibstaticd.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)vendor\shaderc\lib\$(Configuration);$(ProjectDir)vendor\glfw\lib\Release;$(ProjectDir)vendor\assimp\lib\$(Configuration);C:\VulkanSDK\1.3.231.1\Lib</AdditionalLibraryDirectories>
     </Lib>
     <ProjectReference>
@@ -153,7 +153,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;xaudio2.lib;d3d11.lib;assimp-vc143-mt.lib;zlibstatic.lib;</AdditionalDependencies>
+      <AdditionalDependencies>glfw3_mt.lib;shaderc_shared.lib;xaudio2.lib;d3d11.lib;d3dcompiler.lib;assimp-vc143-mt.lib;zlibstatic.lib;</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)vendor\shaderc\lib\$(Configuration);$(ProjectDir)vendor\glfw\lib\Release;$(ProjectDir)vendor\assimp\lib\$(Configuration);C:\VulkanSDK\1.3.231.1\Lib</AdditionalLibraryDirectories>
     </Lib>
     <ProjectReference>
@@ -174,6 +174,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\rendering\api\d3d11\d3d11.cpp" />
     <ClCompile Include="src\rendering\api\vulkan\vk_buffer.cpp" />
     <ClCompile Include="src\rendering\api\vulkan\vk_common.cpp" />
     <ClCompile Include="src\rendering\api\vulkan\vk_context.cpp" />
