--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -262,6 +262,7 @@
     <ClInclude Include="src\rendering\renderer.h" />
     <ClInclude Include="src\rendering\shaders\shaders.h" />
     <ClInclude Include="src\rendering\terrain\quad_tree.h" />
+    <ClInclude Include="src\rendering\ui.h" />
     <ClInclude Include="src\rendering\vertex.h" />
     <ClInclude Include="src\ui\ui.h" />
     <ClInclude Include="src\utility.h" />
